# glsl-nodes

./: .gitignore  README.md  gen-parser.sh  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  release.yml
src/addons/glslnodes/: __init__.py  operators.py  panels.py
src/addons/glslnodes/glsl/: GLSLLexer.tokens  GLSLParser.interp  GLSLPreParser.interp  GLSLPreParserVisitor.py
src/addons/glslnodes/modules/glsl_compiler/: builder.py  glsl_ast.py  graph.py  parser.py  planner.py  visitor.py
src/addons/glslnodes/modules/glsl_compiler/glsl/: GLSLLexer.interp  GLSLLexer.py  GLSLParser.interp  GLSLParser.py  GLSLPreParserListener.py
src/glslnodes/: ast.py  parser.py
src/glslnodes/glsl/: GLSLParser.py  GLSLParserListener.py  GLSLParserVisitor.py  GLSLPreParser.py
tests/: test_parser.py  visitor.py
tests/baselines/: graph_build.txt  input-to-output.txt  no_outputs.txt
tests/baselines/test_graph_build/: assign_sans_declaration.txt  bin_ops_only.txt  function_local_var.txt  input-to-output.txt  no_inputs.txt  no_outputs.txt  reassign_global.txt  sinewave.txt
tests/baselines/test_parser_with_script/: assign_sans_declaration.txt  function_local_var.txt  no_inputs.txt  no_outputs.txt  reassign_global.txt  sinewave.txt
tests/examples/: no_inputs.frag  no_outputs.frag  sinewave.frag  unsupported_socket_type.frag  unsupported_var_type.frag
tests/scripts/: assign_sans_declaration.frag  function_local_var.frag  graph_build.frag  input-to-output.frag  no_inputs.frag  reassign_global.frag
