[metadata]
name = glslnodes
version = 0.0.1
author = Jimmy Hutson
author_email = jimmy@hutsonandfriends.com
description = GLSL to Blender Nodes
long_description = file: README.md, LICENSE.txt
license_files = LICENSE.txt
readme = README.md
classifiers =
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
    "Programming Language :: Python :: 3"
    "Operating System :: OS Independent"

[options]
python_requires = >=3.10
install_requires =
    antlr4-python3-runtime==4.13.0
package_dir=
    =src/scripts/addons
packages = find:

[options.packages.find]
where=src
